--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@ main {
     display: grid;
     grid-template: 40px 40px / 1fr 1fr;
     gap:17px;
+    padding-bottom: 20px;
    
 }
 
@@ -66,5 +67,35 @@ main {
 
 .meme-image {
     max-width: 99%;
+    align-items: center;
 
 }
+.meme {
+    position:relative;
+}
+
+.meme--text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow:
+        2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;
+}
+
